--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,9 @@
   font-family: 'Dosis-Medium';
   src: url(../font/Dosis-Medium.ttf);
 }
-
+html{
+  scroll-behavior: smooth;
+}
 .container-edit{
   display: flex;
   justify-content: center;
@@ -56,6 +58,7 @@
   letter-spacing: 1px;
   text-transform: uppercase;
 }
+
 .left{
   margin-right: auto;
 } 
@@ -270,6 +273,12 @@ h2{
 .konten-span p{
   font-size: 1.1rem;
   font-family: 'Dosis-Medium';
+}
+
+#pesan{
+  color: green;
+  margin-top: -20px;
+  display: block;
 }
 
 
